--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,10 @@
 
 
 spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:francesco
+#spring.datasource.url=jdbc:h2:mem:francesco
 spring.jpa.defer-datasource-initialization=true
-
+spring.datasource.url=jdbc:mysql://localhost:3306/todos
+spring.datasource.username=todos-user
+spring.datasource.password=dummytodos
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=update
