added custm db container

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,8 @@
 spring.h2.console.enabled=true
 #spring.datasource.url=jdbc:h2:mem:francesco
 spring.jpa.defer-datasource-initialization=true
-spring.datasource.url=jdbc:mysql://localhost:3306/todos
-spring.datasource.username=todos-user
-spring.datasource.password=dummytodos
+spring.datasource.url=jdbc:mysql://localhost:3306/eshopDb
+spring.datasource.username=francesco
+spring.datasource.password=nasone
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
