--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,13 @@
 			<version>2.1.0</version>
 		</dependency>
 
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+			<version>3.1.1</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
