--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,7 @@
 spring.h2.console.enabled=true
 #spring.datasource.url=jdbc:h2:mem:francesco
 spring.jpa.defer-datasource-initialization=true
-spring.datasource.url=jdbc:mysql://localhost:3306/eshopDb
-spring.datasource.username=francesco
-spring.datasource.password=nasone
-spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQLDialect
-spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=Nasone22!
+spring.jpa.hibernate.ddl-auto=create
